# cpp-stowage

./: .gitignore  CMakeLists.txt  Ship.cpp  Ship.h  main.cpp
algorithm/: BasicAlgorithm.cpp  BasicAlgorithm.h  HeuristicOptimized1.cpp  HeuristicOptimized1.h  HeuristicOptimized2.cpp  HeuristicOptimized2.h  NaiveAlgorithm.cpp  NaiveAlgorithm.h  NaiveAlgorithmHorizontal.cpp  NaiveAlgorithmHorizontal.h  NaiveAlgorithmVertical.cpp  NaiveAlgorithmVertical.h  Optimized1.cpp  Optimized1.h  Optimized2.cpp  Optimized2.h  OptimizedAlgorithmHorizontal.cpp  OptimizedAlgorithmHorizontal.h  OptimizedAlgorithmVertical.cpp  OptimizedAlgorithmVertical.h  WeightBalanceCalculator.cpp  _206039984_a.cpp  _206039984_a.h  _206039984_b.cpp  _206039984_b.h  _206039984_c.cpp  _206039984_c.h  _206039984_d.cpp  _206039984_d.h  _206039984_e.cpp  _206039984_e.h  _206039984_f.cpp  _206039984_f.h  _206039984_g.cpp  _206039984_g.h  makefile
common/: Algorithm.cpp  Algorithm.h  Container.cpp  Container.h  ContainersPosition.cpp  ContainersPosition.h  CraneManagement.cpp  CraneManagement.h  IO.cpp  IO.h  NaiveAlgorithm.cpp  NaiveAlgorithm.h  Route.cpp  Route.h  Ship.cpp  Ship.h  ShipPlan.cpp  ShipPlan.h  Simulation.cpp  Simulation.h  SpotContainers.cpp  SpotContainers.h  Travel.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
common/errors/: Errors.cpp  Errors.h
common/interfaces/: AbstractAlgorithm.h
common/objects/: AbstractAlgorithm.h  Container.cpp  Container.h  ContainersPosition.cpp  ContainersPosition.h  CraneManagement.cpp  CraneManagement.h  Named.cpp  Named.h  Route.cpp  Route.h  Ship.cpp  Ship.h  ShipPlan.cpp  ShipPlan.h  Travel.cpp  Travel.h
common/utils/: Error.h  Errors.cpp  Errors.h  ErrorsIterator.cpp  ErrorsIterator.h  IO.cpp  IO.h  ISO_6346.cpp  ISO_6346.h  Registrar.cpp  Registrar.h
ex4/: Ship.h
interfaces/: AbstractAlgorithm.h  AlgorithmRegistration.cpp  AlgorithmRegistration.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
simulation/: AlgorithmResults.cpp  AlgorithmResults.h  CheckAlgorithmError.cpp  CheckAlgorithmError.h  Simulation.cpp  Simulation.h  main.cpp  makefile
simulator/: AlgorithmRegistration.cpp  AlgorithmRegistration.h  AlgorithmResults.cpp  NumTasks.cpp  NumTasks.h  NumThreads.cpp  NumThreads.h  SimpleTasksProducer.cpp  SimpleTasksProducer.h  Simulation.cpp  Simulation.h  ThreadPoolExecuter.cpp  ThreadPoolExecuter.h  main.cpp  makefile
src/: Algorithm.cpp  Algorithm.h  Container.h  ContainersPosition.cpp  CraneManagement.cpp  CraneManagement.h  CraneOperation.cpp  CraneOperation.h  NaiveAlgorithm.cpp  NaiveAlgorithm.h  Route.h  Ship.h  Simulation.cpp  Simulation.h  WeightBalanceCalculator.h
src/algorithm/: AbstractAlgorithm.h  BasicAlgorithm.cpp  BasicAlgorithm.h  CraneManagement.cpp  CraneManagement.h  NaiveAlgorithm.cpp  NaiveAlgorithm.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h
src/simulation/: Simulation.cpp  Simulation.h
tests/: CMakeLists.txt  ILASH_1.cargo_data  NaiveAlgorithm-test1.csv  ReadInputTest.cpp  SSSSS.cargo_data  Tests.cpp  plan2.csv  route.csv  test1.csv  test2-wrong.csv
tests/input/travel1/: AAAAA_1.txt  AAAAA_7.txt  route.txt
tests/input/travel2/: AAAAA_3.txt  AAAAA_7.txt  BBBBB_23.txt  CCCCC_14.txt  CCCCC_23.txt  route.txt  ship_plan.txt
tests/input/travel3/: AAAAA_1.cargo_data.txt  AAAAA_3.cargo_data.txt
tests/input/travels/travel1/: AAAAA_1.cargo_data  BBBBB_1.cargo_data  CCCCC_1.cargo_data  CCCCC_2.crago_data  ab.ship_plan  abc.route
tests/input/travels/travel2/: AAAAA_3.cargo_data  asfhf.rouste
tests/input/travels/travel3/: 4.ship_plan
tests/lib/googletest/scripts/: release_docs.py
